--- a/CiklumTestXamarin/CiklumTestXamarin/CiklumTestXamarin.csproj
+++ b/CiklumTestXamarin/CiklumTestXamarin/CiklumTestXamarin.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Models\Name.cs" />
+    <Compile Include="Models\Result.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
